--- a/src/pages/Colors&Type.pug
+++ b/src/pages/Colors&Type.pug
@@ -1,50 +1,36 @@
 <!DOCTYPE html>
 html(lang="en")
-	head
-		link(rel="stylesheet", href="fonts.css")
-		meta(charset="UTF-8")
-		meta(name="viewport", content="width=device-width, initial-scale=1.0")
-		title Document
-	body
-		.colorsandtype
-			include ../includes/emblem
-			.colors
-				.Rectangle1
-				.Rectangle2
-				.Rectangle3
-				.Rectangle4
-				.Rectangle5
-				.Rectangle6
-				.Rectangle7
-				.def1
-					p Dark Shade 100%<br><span>#1F2041
-				.def2
-					p Dark Shade 75%<br><span>#1F2041
-				.def3
-					p Dark Shade 50%<br><span>#1F2041
-				.def4
-					p Dark Shade 25%<br><span>#1F2041
-				.def5
-					p Dark Shade 5%<br><span>#1F2041
-				.def6
-					p Purple<br><span>#BC9CFF
-				.def7
-					p Green<br><span>#6FCF97
-			.headersDef
-				.headersDef__h1 H1
-				.headersDef__h2 H2
-				.headersDef__h3 H3
-				.headersDef__body Body
-				.headersDef__h1Text This one is the sub-section or widget title
-				.headersDef__h2Text Next one is the item title inside widgets
-				.headersDef__h3Text This is a label or CTA text
-				.headersDef__bodyText This is the body text which is used for most of the design, like paragraphs, lists, etc.
-		//-  ul.colors
-		//-   li
-		//-    include ../includes/colorDefine
-		//-   li.darkShade75
-		//-   li.darkShade50
-		//-   li.darkShade25
-		//-   li.darkShade5
-		//-   li.purple
-		//-   li.green
+  head
+    link(rel="stylesheet", href="fonts.css")
+    link(rel="stylesheet", href="app.css")
+    meta(charset="UTF-8")
+    meta(name="viewport", content="width=device-width, initial-scale=1.0")
+    title Document
+  body
+    mixin color-item(colorName, text, modificator)
+      li.colorItem.colorsMenu__colorItem
+        div(class='colorItem__rect '+'colorItem__rect'+modificator)
+        .colorItem__text= colorName
+          .colorItem__textColor=text
+    mixin title-item(titleItem, text)
+      li.titleItem.titleMenu__titleItem
+        div(class='titleItem__title '+'titleItem__title--'+titleItem)= titleItem
+        div(class='titleItem__text '+'titleItem__text--'+titleItem)= text
+    .colorsandtype
+      .emblem-wrapper
+        include ../blocks/emblem/emblem
+      .wrapper
+        .colorsandtype__menu-container
+          ul.colorsMenu.colorsandtype__colorsMenu
+            +color-item('Dark Shade 100%','#1F2041','--DarkShade100')
+            +color-item('Dark Shade 75%','#1F2041','--DarkShade75')
+            +color-item('Dark Shade 50%','#1F2041','--DarkShade50')
+            +color-item('Dark Shade 25%','#1F2041','--DarkShade25')
+            +color-item('Dark Shade 5%','#1F2041','--DarkShade5')
+            +color-item('Purple','#BC9CFF','--purple')
+            +color-item('Green','#6FCF97','--green')
+          ul.titleMenu.colorsandtype__titleMenu
+            +title-item('H1', 'This one is the sub-section or widget title')
+            +title-item('H2','Next one is the item title inside widgets')
+            +title-item('H3', 'This is a label or CTA text')
+            +title-item('Body', 'This is the body text which is used for most of the design, like paragraphs, lists, etc.')
