--- a/src/blocks/button-else/button-else.scss
+++ b/src/blocks/button-else/button-else.scss
@@ -1,45 +1,32 @@
 .button-else {
+  max-width: 99px;
+  height: 44px;
+  padding: 0.125rem;
+  border-radius: 22px;
+  background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
+  
+  &__body {
+    
+  min-width: 5.1875rem;
+  height: 40px;
+  border-radius: 22px;
+  padding: 0.4375rem 0 0 0;
+  background: #FFFFFF;
+  }
 
-   &__border {
-      position: absolute;
-      width: 79px;
-      height: 34px;
-      
-      background: linear-gradient(180deg, #BC9CFF 0%, #8BA4F9 100%);
-      border-radius: 22px;
-   }
-
-   &__body {
-      position: absolute;
-      width: 75px;
-      height: 30px;
-      left: 2px;
-      top: 2px;
-      background: white;
-      border-radius: 22px;
-      display: flex;
-      align-items: center;
-      justify-content: center;
-   }
-
-   &__text {
-      position: absolute;
-width: 39px;
-height: 15px;
-
-     
-      font-family: Montserrat;
-font-style: normal;
-font-weight: bold;
-font-size: 12px;
-line-height: 15px;
+  &__text {
+  text-align: center;
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
 /* identical to box height */
 
-text-transform: uppercase;
+  text-transform: uppercase;
 
 /* Primary Color */
 
-color: #BC9CFF;
-
-   }
+  color: #BC9CFF;
+  }
 }
