--- a/src/pages/Colors&Type.pug
+++ b/src/pages/Colors&Type.pug
@@ -1,4 +1,3 @@
-<!DOCTYPE html>
 html(lang="en")
   head
     link(rel="stylesheet", href="fonts.css")
@@ -17,9 +16,9 @@ html(lang="en")
         div(class='titleItem__title '+'titleItem__title--'+titleItem)= titleItem
         div(class='titleItem__text '+'titleItem__text--'+titleItem)= text
     .colorsandtype
-      .emblem-wrapper
+      .colorsandtype__emblem-wrapper
         include ../blocks/emblem/emblem
-      .wrapper
+      .colorsandtype__wrapper
         .colorsandtype__menu-container
           ul.colorsMenu.colorsandtype__colorsMenu
             +color-item('Dark Shade 100%','#1F2041','--DarkShade100')
