--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -1,35 +1,34 @@
-html(lang="en")
+<!DOCTYPE html>
+html(lang="ru")
   head
-    link(rel="stylesheet", href="fonts.css")
-    link(rel="stylesheet", href="app.css")
     meta(charset="UTF-8")
+    link(rel="stylesheet", href="reset.css")
+    link(rel="stylesheet", href="app.css")
+    link(rel="stylesheet", href="fonts.css")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document
-  body
-    mixin color-item(colorName, text, modificator)
-      li.colorItem.colorsMenu__colorItem
-        div(class='colorItem__rect '+'colorItem__rect'+modificator)
-        .colorItem__text= colorName
-          .colorItem__textColor=text
-    mixin title-item(titleItem, text)
-      li.titleItem.titleMenu__titleItem
-        div(class='titleItem__title '+'titleItem__title--'+titleItem)= titleItem
-        div(class='titleItem__text '+'titleItem__text--'+titleItem)= text
-    .colorsandtype
-      .colorsandtype__emblem-wrapper
-        include ../blocks/emblem/emblem
-      .colorsandtype__wrapper
-        .colorsandtype__menu-container
-          ul.colorsMenu.colorsandtype__colorsMenu
-            +color-item('Dark Shade 100%','#1F2041','--DarkShade100')
-            +color-item('Dark Shade 75%','#1F2041','--DarkShade75')
-            +color-item('Dark Shade 50%','#1F2041','--DarkShade50')
-            +color-item('Dark Shade 25%','#1F2041','--DarkShade25')
-            +color-item('Dark Shade 5%','#1F2041','--DarkShade5')
-            +color-item('Purple','#BC9CFF','--purple')
-            +color-item('Green','#6FCF97','--green')
-          ul.titleMenu.colorsandtype__titleMenu
-            +title-item('H1', 'This one is the sub-section or widget title')
-            +title-item('H2','Next one is the item title inside widgets')
-            +title-item('H3', 'This is a label or CTA text')
-            +title-item('Body', 'This is the body text which is used for most of the design, like paragraphs, lists, etc.')
+    title Headers-Footers
+  body 
+    mixin button-else(text)
+      .button-else__body
+        .button-else__text=text
+    mixin button-default(text)
+      .button-default__text=text
+    mixin menu-item(elementname, dropdown=false, active=false)
+      if (dropdown==true)
+        if (active==true)
+          a(href="#")
+            li(class="menu-list__item "+"menu-list__item--active")= elementname
+              img(src="./src/img/expand_more.svg")
+        else
+          a(href="#")
+            li(class="menu-list__item")= elementname
+              img(src="./src/img/expand_more.svg")
+      else
+        if (active==true)
+          a(href="#")
+            li(class="menu-list__item "+"menu-list__item--active")= elementname
+        else
+          a(href="#")
+            li(class="menu-list__item")= elementname
+    .headers-and-footers
+      include ../blocks/headers-and-footers/headers-and-footers
