Done button-default--big

--- a/src/blocks/Standart-Nav-Bar/Standart-Nav-Bar.pug
+++ b/src/blocks/Standart-Nav-Bar/Standart-Nav-Bar.pug
@@ -6,5 +6,5 @@
   .Standart-Nav-Bar__button-else.button-else
     +button-else("войти")
   .Standart-Nav-Bar__button-default--big.Standart-Nav-Bar__button-default.button-default
-    +button-default("CLICK ME")
+    +button-default("зарегистрироваться")
   
