--- a/src/blocks/Standart-Nav-Bar/_Standart-Nav-Bar.scss
+++ b/src/blocks/Standart-Nav-Bar/_Standart-Nav-Bar.scss
@@ -1,6 +1,10 @@
 .Standart-Nav-Bar {
+  padding: 0.9375rem 0 0 0 ;
 
   &__body {
+    display: flex;
+    // justify-content: space-between;
+    max-width: 1160px;
     
   }
 
