--- a/src/blocks/Standart-Nav-Bar/__button-default/--big/Standart-Nav-Bar__button-default--big.scss
+++ b/src/blocks/Standart-Nav-Bar/__button-default/--big/Standart-Nav-Bar__button-default--big.scss
@@ -1,5 +1,9 @@
 &__button-default--big {
   // max-width: 196px;
-  // height: 34px;
-  // padding: 0.5625rem 0 0 1.1875rem;
+  height: 34px;
+  padding: 0.5625rem 1.25rem 0 1.1875rem;
+  align-self: center;
+    .button-default__text {
+      width: 157px;
+    }
 }
