--- a/src/blocks/Standart-Nav-Bar/__button-else/Standart-Nav-Bar__button-else.scss
+++ b/src/blocks/Standart-Nav-Bar/__button-else/Standart-Nav-Bar__button-else.scss
@@ -1,3 +1,9 @@
 &__button-else {
-  
+  max-width: 87px;
+height: 34px;
+align-self: center;
+ .button-else__body {
+   padding: 0.4375rem 0 0 0;
+   height: 30px;
+ }
 }
