--- a/src/blocks/menu-list/menu-list.scss
+++ b/src/blocks/menu-list/menu-list.scss
@@ -1,4 +1,8 @@
 .menu-list {
+  display: flex;
+  width: 100%;
+  height: 100%;
+  justify-content: space-between;
 @import './__item/menu-list__item.scss';
 @import './__item/--active/menu-list__item--active.scss';
 &__dropdown-img {
