--- a/src/blocks/Standart-Nav-Bar/_Standart-Nav-Bar.scss
+++ b/src/blocks/Standart-Nav-Bar/_Standart-Nav-Bar.scss
@@ -1,20 +1,21 @@
 .Standart-Nav-Bar {
-  padding: 0.9375rem 0 0 0 ;
+  padding: 0.9375rem 8.75rem ;
 
   &__body {
     display: flex;
     // justify-content: space-between;
-    max-width: 1160px;
+    // max-width: 1160px;
     
   }
 
   &__logo {
+    margin-right: 17.769375rem;
     
   }
 
   &__header-menu {
     height: 21px;
-    margin: 0.6875rem 0 0.5rem 0;
+    margin: 0.6875rem 1.25rem 0.5rem 0;
   
   }
 
@@ -25,6 +26,4 @@
 
   @import './__button-else/Standart-Nav-Bar__button-else.scss';
 
-  &__rect {
-  }
 }
