--- a/src/blocks/Standart-Nav-Bar/__button-else/Standart-Nav-Bar__button-else.scss
+++ b/src/blocks/Standart-Nav-Bar/__button-else/Standart-Nav-Bar__button-else.scss
@@ -2,6 +2,7 @@
   max-width: 87px;
 height: 34px;
 align-self: center;
+margin-right: 1.25rem;
  .button-else__body {
    padding: 0.4375rem 0 0 0;
    height: 30px;
