--- a/src/blocks/menu-list/menu-list.scss
+++ b/src/blocks/menu-list/menu-list.scss
@@ -10,7 +10,12 @@
   width:24px ;
   height:21px ;
   
-align-items: center;
+// align-items: center;
 text-align: center;
+// img{
+// @media (max-width:467px) {
+  
+// }
+// }
 }
 }
