--- a/src/blocks/Standart-Nav-Bar/__button-else/Standart-Nav-Bar__button-else.scss
+++ b/src/blocks/Standart-Nav-Bar/__button-else/Standart-Nav-Bar__button-else.scss
@@ -1,5 +1,5 @@
 &__button-else {
-  max-width: 87px;
+flex-basis: 87px;
 height: 34px;
 align-self: center;
 margin-right: 1.25rem;
@@ -7,4 +7,7 @@ margin-right: 1.25rem;
    padding: 0.4375rem 0 0 0;
    height: 30px;
  }
+//  @media (max-width:428px) {
+//    margin: 0;
+//  }
 }
