--- a/src/blocks/header-menu/__menu-list/header-menu__menu-list.scss
+++ b/src/blocks/header-menu/__menu-list/header-menu__menu-list.scss
@@ -1,6 +1,16 @@
 &__menu-list {
    display: flex;
-   max-width: 447px;
+   // max-width: 447px;
    height: 21px;
    justify-content: space-between;
+   flex-wrap: wrap;
+   @media (max-width:467px) {
+      .menu-list__dropdown-img {
+         width: 12px;
+         img {
+            width:10px ;
+         }
+      }
+    }
+   
 }
