--- a/src/blocks/Standart-Nav-Bar/_Standart-Nav-Bar.scss
+++ b/src/blocks/Standart-Nav-Bar/_Standart-Nav-Bar.scss
@@ -1,59 +1,21 @@
 .Standart-Nav-Bar {
-  // padding: 0.9375rem 8.75rem ;
   max-width: 1440px;
   height: 70px;
   background: #FFFFFF;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
   display: flex;
   justify-content: center;
-    align-items: center;
-    padding: 0 8px;
-    @media (max-width:895px) {
-      height: 100px;
-      // margin: 0;
-    }
-    @media (max-width:428px) {
-      height: 150px;
-    }
-  &__body {
-    display: flex;
-    flex-wrap: wrap;
-    // justify-content: flex-end;
-    flex-basis: 1160px;
-    // height: 40px;
-    height: 57.1428571%;
-    @media (max-width:428px) {
-      justify-content: center;
-      
-    }
+  align-items: center;
+  padding: 0 8px;
+  @media (max-width:895px) {
+    height: 100px;
   }
-
-  &__logo {
-    // margin-right: 17.769375rem;
-    flex: 1 1 auto;
-    @media (max-width:428px) {
-      flex-basis: 302px;
-    }
+  @media (max-width:428px) {
+    height: 150px;
   }
-
-  &__header-menu {
-    height: 21px;
-    margin: 0.6875rem 1.25rem 0.5rem 0;
-    @media (max-width:895px) {
-      order: 1;
-      // margin: 0;
-    }
-    @media (max-width:600px) {
-      
-      margin-right: 0;
-    }
-  }
-
+  @import './__body/Standart-Nav-Bar__body.scss';
+  @import './__logo/Standart-Nav-Bar__logo.scss';
+  @import './__header-menu/Standart-Nav-Bar__header-menu.scss';
   @import './__button-default/--big/Standart-Nav-Bar__button-default--big.scss';
-
-  &__button-default {
-  }
-
   @import './__button-else/Standart-Nav-Bar__button-else.scss';
-
 }
