--- a/src/blocks/Standart-Logged-In-Nav-Bar/_Standart-Logged-In-Nav-Bar.scss
+++ b/src/blocks/Standart-Logged-In-Nav-Bar/_Standart-Logged-In-Nav-Bar.scss
@@ -1,36 +1,3 @@
 .Standart-Logged-In-Nav-Bar {
-
-   &__body {
-position: absolute;
-width: 1440px;
-height: 70px;
-background: #FFFFFF;
-box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
-   }
-
-   &__logo {
-position: absolute;
-width: 105.69px;
-height: 40px;
-left: 140px;
-top: 15px;
-   }
-
-   &__header-menu {
-position: absolute;
-width: 530px;
-height: 21px;
-left: 595px;
-top: 25px;
-
-   }
-
-   &__user {
-      position: absolute;
-      width: 146px;
-      height: 30px;
-      top: 20px;
-      left: 1155px;
-      
-   }
+@import './__body/Standart-Logged-In-Nav-Bar__body.scss';
 }
