--- a/src/blocks/headers-and-footers/headers-and-footers.pug
+++ b/src/blocks/headers-and-footers/headers-and-footers.pug
@@ -2,8 +2,8 @@
   include ../emblem/emblem
 .headers-and-footers__Standart-Nav-Bar.Standart-Nav-Bar
   include ../Standart-Nav-Bar/Standart-Nav-Bar
-      //- .headers-and-footers__Standart-Logged-In-Nav-Bar.Standart-Logged-In-Nav-Bar
-      //-   include ../blocks/Standart-Logged-In-Nav-Bar/Standart-Logged-In-Nav-Bar
+.headers-and-footers__Standart-Logged-In-Nav-Bar.Standart-Logged-In-Nav-Bar
+  include ../Standart-Logged-In-Nav-Bar/Standart-Logged-In-Nav-Bar
       //- .headers-and-footers__Footer-Widgets-and-Copyright-Bar.Footer-Widgets-and-Copyright-Bar
       //-   .Footer-Widgets-and-Copyright-Bar__logo-text.logo-text
       //-     .logo-text__logo
