--- a/src/blocks/headers-and-footers/headers-and-footers.scss
+++ b/src/blocks/headers-and-footers/headers-and-footers.scss
@@ -6,4 +6,5 @@
   background: #F4F4F6;
   @import './__emblem/headers-and-footers__emblem.scss';
   @import './__Standart-Nav-Bar/headers-and-footers__Standart-Nav-Bar.scss';
+  @import './__Standart-Logged-In-Nav-Bar/headers-and-footers__Standart-Logged-In-Nav-Bar.scss';
 }
