--- a/src/blocks/user/_user.scss
+++ b/src/blocks/user/_user.scss
@@ -1,32 +1,7 @@
 .user {
-
-   &__text {
-position: absolute;
-width: 114px;
-height: 18px;
-left: 31px;
-top: 6px;
-
-font-family: Montserrat;
-font-style: normal;
-font-weight: normal;
-font-size: 14px;
-line-height: 17px;
-
-
-/* Dark 50% */
-
-color: rgba(31, 32, 65, 0.5);
-   }
-
-   &__line {
-      position: absolute;
-width: 1px;
-height: 30px;
-
-
-/* Dark 10% */
-
-background: rgba(31, 32, 65, 0.1);
-   }
+  display: flex;
+  width: 121px;
+  justify-content: space-between;
+  @import './__rect/user__rect.scss';
+  @import './__name/user__name.scss';
 }
