Edited 'header-menu' block. Deleted 'menu-list' block

--- a/src/main.scss
+++ b/src/main.scss
@@ -10,7 +10,7 @@ body {
 @import './blocks/Standart-Nav-Bar/Standart-Nav-Bar.scss';
 @import './blocks/Standart-Logged-In-Nav-Bar/Standart-Logged-In-Nav-Bar.scss';
 @import './blocks/user/user.scss';
-@import './blocks/menu-list/menu-list.scss';
+// @import './blocks/menu-list/menu-list.scss';
 a {
     text-decoration: none;
 }
