--- a/src/blocks/Standart-Nav-Bar/__header-menu/Standart-Nav-Bar__header-menu.scss
+++ b/src/blocks/Standart-Nav-Bar/__header-menu/Standart-Nav-Bar__header-menu.scss
@@ -1,10 +1,23 @@
 &__header-menu {
-  height: 21px;
+  // height: 21px;
   margin: 0.6875rem 1.25rem 0.5rem 0;
   @media (max-width:891px) {
     order: 1;
   }
   @media (max-width:600px) {
     margin-right: 0;
+  }
+  .header-menu__item {
+    @media (max-width:467px) {
+      font-size: 11px;
+    }
+  }
+  .header-menu__dropdown-img {
+    @media (max-width:467px) {
+      width: 12px;
+      img {
+        width:10px ;
+      }
+    }
   }
 }
