--- a/src/blocks/header-menu/__menu-list/header-menu__menu-list.scss
+++ b/src/blocks/header-menu/__menu-list/header-menu__menu-list.scss
@@ -1,14 +1,7 @@
 &__menu-list {
   display: flex;
-  height: 21px;
+  width: 100%;
+  height: 100%;
   justify-content: space-between;
   flex-wrap: wrap;
-  @media (max-width:467px) {
-    .menu-list__dropdown-img {
-      width: 12px;
-      img {
-        width:10px ;
-      }
-    }
-  }
 }
