--- a/src/blocks/header-menu/header-menu.scss
+++ b/src/blocks/header-menu/header-menu.scss
@@ -1,5 +1,7 @@
 .header-menu {
   flex-basis: 447px;
-  height: 21px;
   @import './__menu-list/header-menu__menu-list.scss';
+  @import './__item/header-menu__item.scss';
+  @import './__item/--active/header-menu__item--active.scss';
+  @import './__dropdown-img/header-menu____dropdown-img.scss';
 }
