--- a/src/blocks/Standart-Logged-In-Nav-Bar/_Standart-Logged-In-Nav-Bar.scss
+++ b/src/blocks/Standart-Logged-In-Nav-Bar/_Standart-Logged-In-Nav-Bar.scss
@@ -7,6 +7,9 @@
   align-items: center;
   background: #FFFFFF;
   box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+  @media (max-width:709px) {
+    height: 100px;
+  }
   @import './__body/Standart-Logged-In-Nav-Bar__body.scss';
   @import './__logo/Standart-Logged-In-Nav-Bar__logo.scss';
   @import './__header-menu/Standart-Logged-In-Nav-Bar__header-menu.scss';
