Done text-field-default block, added hover and focus

--- a/src/blocks/headers-and-footers/headers-and-footers.pug
+++ b/src/blocks/headers-and-footers/headers-and-footers.pug
@@ -4,7 +4,8 @@
   include ../Standart-Nav-Bar/Standart-Nav-Bar
 .headers-and-footers__Standart-Logged-In-Nav-Bar.Standart-Logged-In-Nav-Bar
   include ../Standart-Logged-In-Nav-Bar/Standart-Logged-In-Nav-Bar
-      //- .headers-and-footers__Footer-Widgets-and-Copyright-Bar.Footer-Widgets-and-Copyright-Bar
+.headers-and-footers__Footer-Widgets-and-Copyright-Bar.Footer-Widgets-and-Copyright-Bar
+  include ../Footer-Widgets-and-Copyright-Bar/Footer-Widgets-and-Copyright-Bar
       //-   .Footer-Widgets-and-Copyright-Bar__logo-text.logo-text
       //-     .logo-text__logo
       //-     .logo-text__text
