--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -32,5 +32,9 @@ html(lang="ru")
         else
           //- a(href="#")
           li(class="header-menu__item")= elementname
+    mixin footer-menu(...items)
+      each item in items
+        li.Footer-Widgets-and-Copyright__menu-item=item
     .headers-and-footers
       include ../blocks/headers-and-footers/headers-and-footers
+      include ../blocks/Form-Elements/text-field-default/text-field-default
