--- a/src/main.scss
+++ b/src/main.scss
@@ -1,6 +1,10 @@
 body {
   background: #E5E5E5;
 }
+:active, :hover, :focus {
+  outline: 0;
+  outline-offset: 0;
+}
 @import './blocks/headers-and-footers/headers-and-footers.scss';
 @import './blocks/button-default/button-default';
 @import './blocks/button-else/button-else.scss';
@@ -11,6 +15,7 @@ body {
 @import './blocks/Standart-Logged-In-Nav-Bar/Standart-Logged-In-Nav-Bar.scss';
 @import './blocks/user/user.scss';
 // @import './blocks/menu-list/menu-list.scss';
+@import './blocks/Form-Elements/text-field-default/text-field-default.scss';
 a {
     text-decoration: none;
 }
