--- a/src/main.scss
+++ b/src/main.scss
@@ -16,6 +16,7 @@ body {
 @import './blocks/user/user.scss';
 // @import './blocks/menu-list/menu-list.scss';
 @import './blocks/Form-Elements/text-field-default/text-field-default.scss';
+@import './blocks/Form-Elements/subscription-text-field/subscription-text-field.scss';
 a {
     text-decoration: none;
 }
