--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -37,4 +37,4 @@ html(lang="ru")
         li.Footer-Widgets-and-Copyright__menu-item=item
     .headers-and-footers
       include ../blocks/headers-and-footers/headers-and-footers
-      include ../blocks/Form-Elements/text-field-default/text-field-default
+      //- include ../blocks/Form-Elements/text-field-default/text-field-default
