--- a/src/blocks/headers-and-footers/headers-and-footers.scss
+++ b/src/blocks/headers-and-footers/headers-and-footers.scss
@@ -7,4 +7,5 @@
   @import './__emblem/headers-and-footers__emblem.scss';
   @import './__Standart-Nav-Bar/headers-and-footers__Standart-Nav-Bar.scss';
   @import './__Standart-Logged-In-Nav-Bar/headers-and-footers__Standart-Logged-In-Nav-Bar.scss';
+  @import './__Footer-Widgets-and-Copyright-Bar/Footer-Widgets-and-Copyright-Bar.scss';
 }
