--- a/src/blocks/Footer-Widgets-and-Copyright-Bar/Footer-Widgets-and-Copyright-Bar.scss
+++ b/src/blocks/Footer-Widgets-and-Copyright-Bar/Footer-Widgets-and-Copyright-Bar.scss
@@ -1,54 +1,147 @@
 .Footer-Widgets-and-Copyright-Bar {
 
   &__Footer-Widgets {
+    padding: 0 8px;
+    height: 372px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background: #FFFFFF;
+    box-shadow: 0px 1px 0px rgba(31, 32, 65, 0.1);
+    margin-bottom: 1px;
   }
 
-  &__body {
-    display: flex;
+  &__Footer-Widgets-body {
     flex-basis: 1160px;
-    align-items: center;
+    height: 172px;
+    display: flex;
   }
 
   &__discription {
+    flex-basis: 260px;
+    height: 132px;
+    margin-right: 40px;
   }
 
-  &__text {
+  &__logo {
+    margin-bottom: 17px;
+    height: 40px;
+  }
+
+  &__discription-text {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 14px;
+  line-height: 24px;
+  color: rgba(31, 32, 65, 0.75);
   }
 
   &__footer-nav {
+    margin-top: 4px;
+    display: flex;
+    flex-basis: 549px;
+    margin-right: 50px;
   }
 
   &__navigation {
+    display: flex;
+    flex-direction: column;
+    height: 168px;
+    margin-right: 57px;
+    flex-basis: 143px;
   }
 
   &__title {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    text-transform: uppercase;
+    color: #1F2041;
+    margin-bottom: 21px;
   }
 
   &__menu-list {
+    
+    display: flex;
+    flex-grow: 1;
+    flex-direction: column;
+    justify-content: space-between;
   }
 
   &__menu-item {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: rgba(31, 32, 65, 0.5);
   }
 
   &__about-us {
+    height: 168px;
+    display: flex;
+    flex-direction: column;
+    margin-right: 92px;
   }
 
   &__support {
+    height: 130px;
+    display: flex;
+    flex-direction: column;
   }
 
   &__subscriprion {
+    // display: flex;
+    // flex-direction: column;
+    margin-top: 4px;
+    height: 148px;
+    flex-basis: 260px;
+  }
+
+  &__subscriprion-title {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: bold;
+    font-size: 12px;
+    line-height: 15px;
+    text-transform: uppercase;
+    color: #1F2041;
+    margin-bottom: 18px;
+  }
+
+  &__subscriprion-text {
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 24px;
+    color: rgba(31, 32, 65, 0.75);
+    margin-bottom: 23px;
   }
 
   &__subscription-text-field {
+    width: 260px;
+    .subscription-text-field__submit {
+      left:216px;
+    }
   }
 
   &__Copyright-Bar {
+    padding: 0 8px;
     display: flex;
     justify-content: center;
     align-items: center;
     height: 70px;
     background: #FFFFFF;
     box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+  }
+  &__Copyright-Bar-body {
+    display: flex;
+    flex-basis: 1160px;
+    align-items: center;
   }
 
   &__copyright-text {
