--- a/src/blocks/Form-Elements/text-field-default/text-field-default.scss
+++ b/src/blocks/Form-Elements/text-field-default/text-field-default.scss
@@ -5,6 +5,7 @@
   border: 1px solid rgba(31, 32, 65, 0.25);
   box-sizing: border-box;
   border-radius: 4px;
+  padding-left: 15px;
 }
 
 ::-webkit-input-placeholder {
