--- a/src/blocks/Footer-Widgets-and-Copyright-Bar/Footer-Widgets-and-Copyright-Bar.scss
+++ b/src/blocks/Footer-Widgets-and-Copyright-Bar/Footer-Widgets-and-Copyright-Bar.scss
@@ -9,18 +9,33 @@
     background: #FFFFFF;
     box-shadow: 0px 1px 0px rgba(31, 32, 65, 0.1);
     margin-bottom: 1px;
+    @media (max-width:541px) {
+      height: 500px;
+    }
+    @media (max-width:414px) {
+      height: 800px;
+    }
   }
 
   &__Footer-Widgets-body {
     flex-basis: 1160px;
-    height: 172px;
+    // height: 172px;
     display: flex;
+    flex-wrap: wrap;
+    @media (max-width:1174px) {
+        justify-content: center;
+        flex-basis:1070px;
+     }
+     
   }
 
   &__discription {
     flex-basis: 260px;
     height: 132px;
     margin-right: 40px;
+    @media (max-width:1174px) {
+      margin-right:1.04166667vw;
+    }
   }
 
   &__logo {
@@ -42,6 +57,19 @@
     display: flex;
     flex-basis: 549px;
     margin-right: 50px;
+    flex-wrap: wrap;
+    @media (max-width:1174px) {
+      order: 1;
+      margin-right: 0px;
+      justify-content: space-between;
+    }
+    @media (max-width:414px) {
+      flex-direction: column;
+      align-items: flex-start;
+      height: 500px;
+      flex-basis: auto;
+      // flex-grow: 1;
+    }
   }
 
   &__navigation {
@@ -49,7 +77,11 @@
     flex-direction: column;
     height: 168px;
     margin-right: 57px;
+    // margin-right: 2.96875vw;
     flex-basis: 143px;
+    @media (max-width:1174px) {
+      margin-right:0;
+    }
   }
 
   &__title {
@@ -85,17 +117,21 @@
     display: flex;
     flex-direction: column;
     margin-right: 92px;
+    @media (max-width:1174px) {
+      margin-right:0;
+    }
   }
 
   &__support {
     height: 130px;
     display: flex;
     flex-direction: column;
+    // @media (max-width:414px) {
+    //   margin-top: 10px;
+    // }
   }
 
   &__subscriprion {
-    // display: flex;
-    // flex-direction: column;
     margin-top: 4px;
     height: 148px;
     flex-basis: 260px;
