Done 'headers-and-footers' block

--- a/src/blocks/Footer-Widgets-and-Copyright-Bar/Footer-Widgets-and-Copyright-Bar.pug
+++ b/src/blocks/Footer-Widgets-and-Copyright-Bar/Footer-Widgets-and-Copyright-Bar.pug
@@ -25,10 +25,5 @@
 .Footer-Widgets-and-Copyright-Bar__Copyright-Bar
   .Footer-Widgets-and-Copyright-Bar__Copyright-Bar-body
     p.Footer-Widgets-and-Copyright-Bar__copyright-text Copyright © 2018 Toxin отель. Все права зачищены.
-    .Footer-Widgets-and-Copyright-Bar__social
-      .Footer-Widgets-and-Copyright-Bar__twit
-        img(src="./src/img/twit.svg", alt="twitter")
-      .Footer-Widgets-and-Copyright-Bar__fb
-        img(src="./src/img/fb.svg", alt="facebook")
-      .Footer-Widgets-and-Copyright-Bar__inst
-        img(src="./src/img/inst.svg", alt="instagram")
+    .Footer-Widgets-and-Copyright-Bar__social.social
+      include ../social/social
