--- a/src/blocks/headers-and-footers/headers-and-footers.pug
+++ b/src/blocks/headers-and-footers/headers-and-footers.pug
@@ -7,4 +7,10 @@
 .headers-and-footers__Footer-Widgets-and-Copyright-Bar.Footer-Widgets-and-Copyright-Bar
   include ../Footer-Widgets-and-Copyright-Bar/Footer-Widgets-and-Copyright-Bar
 .headers-and-footers__footer-creative
-  
+  .headers-and-footers__footer-creative-body
+    .headers-and-footers__copyright
+      .headers-and-footers__copyright-logo
+        include ../logo/logo
+      p.headers-and-footers__copyright-text Copyright © 2018 Toxin отель. Все права зачищены.
+    .headers-and-footers__social.social
+      include ../social/social
