--- a/src/blocks/headers-and-footers/headers-and-footers.scss
+++ b/src/blocks/headers-and-footers/headers-and-footers.scss
@@ -8,4 +8,55 @@
   @import './__Standart-Nav-Bar/headers-and-footers__Standart-Nav-Bar.scss';
   @import './__Standart-Logged-In-Nav-Bar/headers-and-footers__Standart-Logged-In-Nav-Bar.scss';
   @import './__Footer-Widgets-and-Copyright-Bar/Footer-Widgets-and-Copyright-Bar.scss';
+  
+  &__footer-creative{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    max-width: 768px;
+    height: 367px;
+    background: #FFFFFF;
+    box-shadow: 0px 10px 20px rgba(31, 32, 65, 0.05);
+    margin: 0 auto;
+  }
+
+  &__footer-creative-body{
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  
+  }
+
+  &__copyright {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    margin-bottom: 25px;
+  }
+
+  &__copyright-logo {
+    height: 40px;
+    margin-bottom: 21px;
+  }
+  &__copyright-text{
+    font-family: Montserrat;
+    font-style: normal;
+    font-weight: normal;
+    font-size: 14px;
+    line-height: 17px;
+    color: rgba(31, 32, 65, 0.75);
+    flex: 1 1 auto;
+    @media (max-width:414px) {
+      font-size: 12px;
+    }
+  }
+
+  &__social {
+    .social__twit {
+      align-items: baseline;
+    }
+  }
+  @media (max-width:414px) {
+    height: 100%;
+  }
 }
