--- a/src/pages/Headers&Footers.pug
+++ b/src/pages/Headers&Footers.pug
@@ -1,44 +1,38 @@
-<!DOCTYPE html>
-html(lang="en")
+html(lang="ru")
   head
     meta(charset="UTF-8")
     link(rel="stylesheet", href="reset.css")
     link(rel="stylesheet", href="app.css")
     link(rel="stylesheet", href="fonts.css")
     meta(name="viewport", content="width=device-width, initial-scale=1.0")
-    title Document
-  body
-    mixin menu(elementname, itemclass, ...items)
-      ul(class="" + elementname)
-        each item in items
-          if (item=='NAVIGATION' || item=='ABOUT US' || item=='SUPPORT')
-            a(href="#")
-              li(class= "" + itemclass +"--active")= item
-          else
-            a(href="#")
-              li(class= "" + itemclass)= item
+    title Headers-Footers
+  body 
+    mixin button-else(text)
+      .button-else__body
+        .button-else__text=text
+    mixin button-default(text)
+      .button-default__text=text
+    mixin menu-item(elementname, dropdown=false, active=false)
+      if (dropdown==true)
+        if (active==true)
+          a(href="#")
+            li(class="header-menu__item"+"header-menu__item--active")= elementname
+              .header-menu__dropdown-img
+                img(src="./src/img/expand_more.svg")
+        else
+          //- a(href="#")
+          li(class="header-menu__item")= elementname
+            .header-menu__dropdown-img
+              img(src="./src/img/expand_more.svg")
+      else
+        if (active==true)
+          //- a(href="#")
+          li(class="header-menu__item "+"header-menu__item--active")= elementname
+        else
+          //- a(href="#")
+          li(class="header-menu__item")= elementname
+    mixin footer-menu(...items)
+      each item in items
+        li.Footer-Widgets-and-Copyright-Bar__menu-item=item
     .headers-and-footers
-      .headers-and-footers__emblem.emblem
-        include ../blocks/emblem/emblem
-      .headers-and-footers__Standart-Nav-Bar.Standart-Nav-Bar
-        include ../blocks/Standart-Nav-Bar/Standart Nav Bar
-      .headers-and-footers__Standart-Logged-In-Nav-Bar.Standart-Logged-In-Nav-Bar
-        include ../blocks/Standart-Logged-In-Nav-Bar/Standart-Logged-In-Nav-Bar
-      .headers-and-footers__Footer-Widgets-and-Copyright-Bar.Footer-Widgets-and-Copyright-Bar
-        .Footer-Widgets-and-Copyright-Bar__logo-text.logo-text
-          .logo-text__logo
-          .logo-text__text
-        nav.Footer-Widgets-and-Copyright-Bar__navigation-menu.navigation-menu
-          //- ul.navigation-menu__menu-list Navigation
-          //- 	li.navigation-menu__item About Us
-          //- 	li.navigation-menu__item News
-          //- 	li.navigation-menu__item Support
-          //- 	li.navigation-menu__item Products
-          +menu('navigation-menu__menu-list', 'navigation-menu__item', 'NAVIGATION', 'About Us', 'News', 'Support', 'Products')
-        .Footer-Widgets-and-Copyright-Bar__about-us-menu.about-us-menu
-          +menu('about-us-menu__menu-list', 'about-us-menu__item', 'ABOUT US', 'Who we are', 'Our team', 'Careers', 'Investors')
-        .Footer-Widgets-and-Copyright-Bar__support-menu.support-menu
-          +menu('support-menu__menu-list', 'support-menu__item', 'SUPPORT', 'Documentation', 'Community', 'Get in Touch')
-        .Footer-Widgets-and-Copyright-Bar__subscribe.subscribe
-        .Footer-Widgets-and-Copyright-Bar__copyrite-bar.copyrite-bar
-      .headers-and-footers__Footer-Creative.Footer-Creative
+      include ../blocks/headers-and-footers/headers-and-footers
