--- a/src/blocks/Form-Elements/text-field-default/text-field-default.scss
+++ b/src/blocks/Form-Elements/text-field-default/text-field-default.scss
@@ -5,7 +5,19 @@
   border: 1px solid rgba(31, 32, 65, 0.25);
   box-sizing: border-box;
   border-radius: 4px;
-  padding-left: 15px;
+  padding-left: 14px;
+  padding-top: 2px;
+  font-family: Montserrat;
+font-style: normal;
+font-weight: normal;
+font-size: 13.6px;
+line-height: 24px;
+/* identical to box height, or 171% */
+
+
+/* Dark 75% */
+
+color: rgba(31, 32, 65, 0.75);
 }
 
 ::-webkit-input-placeholder {
