--- a/src/main.scss
+++ b/src/main.scss
@@ -5,21 +5,86 @@ body {
   outline: 0;
   outline-offset: 0;
 }
-@import './blocks/headers-and-footers/headers-and-footers.scss';
-@import './blocks/button-default/button-default';
-@import './blocks/button-else/button-else.scss';
-// @import './blocks/emblem/emblem.scss';
-@import './blocks/header-menu/header-menu.scss';
-@import './blocks/social/social.scss';
-// @import './blocks/logo/logo.scss';
-@import './blocks/Standart-Nav-Bar/Standart-Nav-Bar.scss';
-@import './blocks/Standart-Logged-In-Nav-Bar/Standart-Logged-In-Nav-Bar.scss';
-@import './blocks/user/user.scss';
-// @import './blocks/menu-list/menu-list.scss';
+// @import './blocks/Form-Elements/text-field-default/text-field-default.scss';
+@import './blocks/Form-Elements/masked-text-field/masked-text-field.scss';
+.formElements{
+  position: relative;
+  padding: 140px 0 0 141px;
+  width: 1440px;
+  height: 1853px;
+  background: #FFFFFF;
+}
+.emblem {
+  position: absolute;
+  width: 48px;
+  height: 48px;
+  left: 30px;
+  top: 30px;
+}
+.container {
+  margin: 0 141px 131px 0;
+}
 
-@import './blocks/Form-Elements/text-field-default/text-field-default.scss';
-@import './blocks/Form-Elements/subscription-text-field/subscription-text-field.scss';
-@import './blocks/Footer-Widgets-and-Copyright-Bar/Footer-Widgets-and-Copyright-Bar.scss';
-a {
-    text-decoration: none;
+.name {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: bold;
+  font-size: 12px;
+  line-height: 15px;
+  /* identical to box height */
+  
+  text-transform: uppercase;
+  
+  /* Dark 100% */
+  
+  color: #1F2041;
+}
+.condition {
+  font-family: Montserrat;
+  font-style: normal;
+  font-weight: normal;
+  font-size: 12px;
+  line-height: 15px;
+  /* identical to box height */
+  
+  
+  text-transform: uppercase;
+  
+  /* Dark 50% */
+  
+  color: rgba(31, 32, 65, 0.5);
+}
+
+.colomn1 {
+  display: flex;
+  flex-direction: column;
+  // width: auto;
+}
+
+.text-field-default-container{
+  // flex-basis: 67px;
+  width: 320px;
+  margin-bottom: 20px;
+  .name {
+    display: inline-block;
+    margin-top: 3px;
+  }
+  .condition {
+    float: right;
+    margin-bottom: 8px;
+  }
+}
+.text-field-hover-focus-container {
+  .text-field-default {
+    padding-bottom: 3px;
+  }
+  width: 320px;
+  .name {
+    display: inline-block;
+  }
+  .condition {
+    font-size: 11.7px;
+    float: right;
+    margin-bottom: 5.44px;
+  }
 }
