Started doing 'dropdown-guest' block. Done 'plus-button' block

--- a/src/main.scss
+++ b/src/main.scss
@@ -7,6 +7,7 @@ body {
 }
 // @import './blocks/Form-Elements/text-field-default/text-field-default.scss';
 @import './blocks/Form-Elements/masked-text-field/masked-text-field.scss';
+@import './blocks/Form-Elements/dopdown-guests/dopdown-guests.scss';
 .formElements{
   position: relative;
   padding: 140px 0 0 141px;
