--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -21,6 +21,11 @@ html(lang="ru")
             p.name Text Field
             p.condition Hover / Focus
             include ../blocks/Form-Elements/text-field-default/text-field-default
+          .dropdown
+            p.name Text Field
+            p.condition Hover / Focus
+            .dopdown-guests
+              include ../blocks/Form-Elements/dopdown-guests/dopdown-guests
         .colomn2
         .colomn3
         .comment
