--- a/src/blocks/Form-Elements/dopdown-guests/dopdown-guests.pug
+++ b/src/blocks/Form-Elements/dopdown-guests/dopdown-guests.pug
@@ -1,14 +1,30 @@
 .dopdown-guests__dropdown-field
   .dopdown-guests__arrow
     img(src="./src/img/expand_more.svg", alt="стрелка")
-  input(class="text-field-default" type="text" disabled )
+  input(class="text-field-default dopdown-guests__text-field-default" type="text" value ="Сколько гостей" disabled )
 .dopdown-guests__dropdown-body
   ul.dopdown-guests__list
     li.dopdown-guests__item
-      .dopdown-guests__item-name
-      .plus-button
-        include ../plus-button/plus-button
-      .dopdown-guests__count
-      .minus-button
+        .dopdown-guests__item-name взрослые
+        .dopdown-guests__minus-button.minus-button
+          include ../minus-button/minus-button
+        .dopdown-guests__count 0
+        .dopdown-guests__plus-button.plus-button
+          include ../plus-button/plus-button
     li.dopdown-guests__item
+        .dopdown-guests__item-name дети
+        .dopdown-guests__minus-button.minus-button
+          include ../minus-button/minus-button
+        .dopdown-guests__count 0
+        .dopdown-guests__plus-button.plus-button
+          include ../plus-button/plus-button
     li.dopdown-guests__item
+        .dopdown-guests__item-name младенцы
+        .dopdown-guests__minus-button.minus-button
+          include ../minus-button/minus-button
+        .dopdown-guests__count 0
+        .dopdown-guests__plus-button.plus-button
+          include ../plus-button/plus-button
+  .dopdown-guests__reset-submit
+    input(class="dopdown-guests__reset" type="reset", value="очистить")
+    input(class="dopdown-guests__submit" type="submit", value="применить")
