--- a/src/blocks/Form-Elements/minus-button/minus-button.scss
+++ b/src/blocks/Form-Elements/minus-button/minus-button.scss
@@ -1,7 +1,7 @@
-&__circle {
+.minus-button {
   width: 30px;
   height: 30px;
-  border: 1px solid rgba(31, 32, 65, 0.25);
+  border: 1px solid rgba(31, 32, 65, 0.1);
   border-radius: 22px;
   display: flex;
   justify-content: center;
