added 'form' tag, connected jQuery

--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -24,8 +24,11 @@ html(lang="ru")
           .dropdown
             p.name Text Field
             p.condition Hover / Focus
-            .dopdown-guests
+            form.dopdown-guests
               include ../blocks/Form-Elements/dopdown-guests/dopdown-guests
         .colomn2
         .colomn3
         .comment
+
+    <script src="https://code.jquery.com/jquery-3.5.1.min.js"></script>
+    script(src="../Form-Elements.js")
