--- a/src/main.scss
+++ b/src/main.scss
@@ -5,7 +5,36 @@ body {
   outline: 0;
   outline-offset: 0;
 }
-// @import './blocks/Form-Elements/text-field-default/text-field-default.scss';
+input[type="submit"] {
+font-family: Montserrat;
+font-style: normal;
+font-weight: bold;
+font-size: 12px;
+line-height: 15px;
+background-color: inherit;
+border-width: 2px;
+    border-width: 0px;
+text-transform: uppercase;
+color: #BC9CFF;
+padding: 0;
+  }
+input[type="reset"] {
+  font-family: Montserrat;
+font-style: normal;
+font-weight: bold;
+font-size: 12px;
+line-height: 15px;
+text-transform: uppercase;
+background-color: inherit;
+border-width: 0px;
+color: rgba(31, 32, 65, 0.5);
+padding: 0;
+
+}
+
+@import './blocks/Form-Elements/text-field-default/text-field-default.scss';
+@import './blocks/Form-Elements/minus-button/minus-button.scss';
+@import './blocks/Form-Elements/plus-button/plus-button.scss';
 @import './blocks/Form-Elements/masked-text-field/masked-text-field.scss';
 @import './blocks/Form-Elements/dopdown-guests/dopdown-guests.scss';
 .formElements{
@@ -24,6 +53,7 @@ body {
 }
 .container {
   margin: 0 141px 131px 0;
+  width: 320px;
 }
 
 .name {
@@ -57,6 +87,7 @@ body {
 }
 
 .colomn1 {
+  position: relative;
   display: flex;
   flex-direction: column;
   // width: auto;
