--- a/src/blocks/Form-Elements/text-field-default/text-field-default.scss
+++ b/src/blocks/Form-Elements/text-field-default/text-field-default.scss
@@ -1,5 +1,5 @@
 .text-field-default {
-  width: 320px;
+  width: 100%;
   height: 44px;
   background: #FFFFFF;
   border: 1px solid rgba(31, 32, 65, 0.25);
@@ -8,16 +8,11 @@
   padding-left: 14px;
   padding-top: 2px;
   font-family: Montserrat;
-font-style: normal;
-font-weight: normal;
-font-size: 13.6px;
-line-height: 24px;
-/* identical to box height, or 171% */
-
-
-/* Dark 75% */
-
-color: rgba(31, 32, 65, 0.75);
+  font-style: normal;
+  font-weight: normal;
+  font-size: 13.6px;
+  line-height: 24px;
+  color: rgba(31, 32, 65, 0.75);
 }
 
 ::-webkit-input-placeholder {
@@ -27,7 +22,7 @@ color: rgba(31, 32, 65, 0.75);
   font-size: 14px;
   line-height: 18px;
   color: rgba(31, 32, 65, 0.25);
-  }
+}
 
 @import './--focus/text-field-default--focus.scss';
 @import './--hover/text-field-default--hover.scss';
