--- a/src/blocks/Form-Elements/masked-text-field/masked-text-field.scss
+++ b/src/blocks/Form-Elements/masked-text-field/masked-text-field.scss
@@ -1,6 +1,6 @@
 @import '../text-field-default/text-field-default.scss';
 .masked-text-field {
-width: 320px;
+width: 100%;
 height: 44px;
 background: #FFFFFF;
 border: 1px solid rgba(31, 32, 65, 0.25);
