--- a/src/main.scss
+++ b/src/main.scss
@@ -82,7 +82,6 @@ input[type="reset"] {
 }
 
 .text-field-default-container{
-  width: 320px;
   margin-bottom: 20px;
   .name {
     display: inline-block;
@@ -94,7 +93,9 @@ input[type="reset"] {
   }
 }
 .text-field-hover-focus-container {
+  margin-bottom: 20px;
   .text-field-default {
+    border: 1px solid rgba(31, 32, 65, 0.5);
     padding-bottom: 3px;
   }
   width: 320px;
@@ -105,5 +106,50 @@ input[type="reset"] {
     font-size: 11.7px;
     float: right;
     margin-bottom: 5.44px;
+  }
+}
+.dropdown {
+  position: relative;
+  margin-bottom: 20px;
+  .name {
+    margin-top: 0.44px;
+    display: inline-block;
+    float: left;
+  }
+  .condition {
+    font-size: 11.7px;
+    float: right;
+    margin-bottom: 5.44px;
+    margin-right: 1.2px;
+  }
+  &__arrow {
+    position: absolute;
+    right: 0;
+    bottom: 0;
+    display: flex;
+    width: 44px;
+    height: 44px;
+    justify-content: center;
+    align-items: center;
+  }
+  &__field {
+    padding-top: 0.5px;
+    font-size: 14px;
+  }
+}
+.masked-text-field-container {
+  .name {
+    margin-top: 3px;
+    display: inline-block;
+    float: left;
+  }
+  .condition {
+    font-size: 11.7px;
+    float: right;
+    margin-bottom: 8px;
+    margin-right: 1.2px;
+  }
+  .masked-text-field{
+    padding-top: 0px;
   }
 }
