--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -31,6 +31,22 @@ html(lang="ru")
             p.name masked text field
             p.condition Default
             include ../blocks//Form-Elements/masked-text-field/masked-text-field
+          .date-dropdown-container
+            .placeholder
+              p.name date Dropdown
+              input(class="date-dropdown text-field-default" type="text" value="ДД.ММ.ГГГГ")
+              .dropdown__arrow
+                img(src="./src/img/expand_more.svg", alt="стрелка")
+            .actual
+              p.name date Dropdown
+              input(class="date-dropdown text-field-default" type="text" value="19.08.2019")
+              .dropdown__arrow
+                img(src="./src/img/expand_more.svg", alt="стрелка")
+          .filter-date-dropdown-container
+            p.name filter date dropdown
+            input(class="text-field-default filter-date-dropdown" type="text" value="19 авг - 23 авг")
+            .dropdown__arrow
+              img(src="./src/img/expand_more.svg", alt="стрелка")
         .colomn2
         .colomn3
         .comment
