--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -47,6 +47,10 @@ html(lang="ru")
             input(class="text-field-default filter-date-dropdown" type="text" value="19 авг - 23 авг")
             .dropdown__arrow
               img(src="./src/img/expand_more.svg", alt="стрелка")
+          .subscription-text-field-container
+            p.name subscription text field
+            .subscription-text-field
+              include ../blocks/Form-Elements/subscription-text-field/subscription-text-field
         .colomn2
         .colomn3
         .comment
