Done 'dropdown-room' block

--- a/src/blocks/Form-Elements/minus-button/minus-button.scss
+++ b/src/blocks/Form-Elements/minus-button/minus-button.scss
@@ -1,4 +1,5 @@
 .minus-button {
+  @import './--fill/minus-button--fill.scss';
   width: 30px;
   height: 30px;
   border: 1px solid rgba(31, 32, 65, 0.1);
