--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -51,6 +51,11 @@ html(lang="ru")
             p.name subscription text field
             .subscription-text-field
               include ../blocks/Form-Elements/subscription-text-field/subscription-text-field
+          .dropdown-room-container
+            p.name dropdown
+            p.condition Default
+            form.dropdown-room
+              include ../blocks/Form-Elements/dropdown-room/dropdown-room
         .colomn2
         .colomn3
         .comment
