--- a/src/pages/index.pug
+++ b/src/pages/index.pug
@@ -51,7 +51,7 @@ html(lang="ru")
             p.name subscription text field
             .subscription-text-field
               include ../blocks/Form-Elements/subscription-text-field/subscription-text-field
-          .dropdown-room-container
+          .dropdown-room-container-default
             p.name dropdown
             p.condition Default
             form.dropdown-room
